--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,11 +1,102 @@
+@font-face {
+  font-family: PingFang;
+  src: url(font/PingFang-Heavy.ttf);
+}
+.page-cnotain {
+  width: 100%;
+  height: calc(100% - 50px);
+  overflow-y: auto;
+}
+section.card {
+  width: 98%;
+  border-radius: 2px;
+  padding: 10px;
+  margin: 10px auto;
+  background: #fff;
+  box-sizing: border-box;
+}
+section.card .contain {
+  margin-top: 10px;
+}
 h2.title {
   width: 100%;
-  height: 130px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 46px;
+  font-size: 18px;
   background: #3C80F2;
-  border-radius: 0px 0px 20px 20px;
+  border-radius: 0px 0px 4px 4px;
+}
+h4.title {
+  color: #333333;
+  position: relative;
+  padding-left: 10px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+}
+h4.title::before {
+  content: "";
+  display: inline-block;
+  width: 4px;
+  height: 16px;
+  background: #3c80f2;
+  position: absolute;
+  top: calc(50% - 8px);
+  left: 0;
+}
+.device-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.device-content .van-collapse-item__content {
+  padding: 0 10px !important;
+}
+.device-content li {
+  width: calc(50% - 10px);
+  min-height: 60px;
+  flex-shrink: 0;
+  display: flex;
+  margin: 4px;
+  align-items: center;
+  padding: 10px 2px 10px 6px;
+  border-radius: 8px;
+}
+.device-content li > div {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+}
+.device-content li > div .name {
+  color: #333;
+  margin-bottom: 10px;
+}
+.device-content li > div .value i {
+  color: #333;
+  opacity: 0.7;
+  font-size: 12px;
+}
+.device-content li > div .status {
+  height: 30px;
+  margin-left: 10px;
+}
+.device-content li > img {
+  height: 30px;
+}
+.chart {
+  width: 100%;
+  height: 300px;
+}
+.choose-date {
+  display: flex;
+  align-items: center;
+}
+.choose-date .van-cell__value--alone {
+  text-align: right;
+}
+.choose-date > span {
+  white-space: nowrap;
 }
