--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -6,7 +6,7 @@
 
 .page-cnotain {
   width: 100%;
-  height: calc(100% - 50px);
+  height: calc(100% - 40px);
   overflow-y: auto;
 }
 
@@ -25,7 +25,7 @@ section.card {
 
 h2.title {
   width: 100%;
-  height: 50px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,13 +33,24 @@ h2.title {
   font-size: 18px;
   background: #3C80F2;
   border-radius: 0px 0px 4px 4px;
+  position: relative;
+  .icon{
+    position: absolute;
+    &.right-icon{
+      right: 10px;
+    }
+
+    &.left-icon{
+      left: 10px;
+    }
+  }
 }
 
 h4.title {
   color: #333333;
   position: relative;
   padding-left: 10px;
-  font-weight: bold;
+  // font-weight: bold;
   display: flex;
   justify-content: space-between;
   font-size: 16px;
@@ -65,12 +76,11 @@ h4.title {
   }
 
   li {
-
-    width: calc(50% - 10px);
+    width: calc(50% - 8px);
     min-height: 60px;
     flex-shrink: 0;
     display: flex;
-    margin: 4px;
+    margin: 3px 4px;
     align-items: center;
     padding: 10px 2px 10px 6px;
     border-radius: 8px;
@@ -82,7 +92,7 @@ h4.title {
 
       .name {
         color: #333;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
       }
 
       .value {
@@ -99,9 +109,34 @@ h4.title {
       }
     }
 
+    &:first-child,
+    &:nth-child(2) {
+
+      &>div {
+        width: 80%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        .name {
+          margin-bottom: 0;
+        }
+
+        span {
+          display: flex;
+          align-items: center;
+        }
+
+        img {
+          height: 20px;
+        }
+      }
+    }
+
     &>img {
       height: 30px;
     }
+
   }
 }
 
@@ -113,6 +148,14 @@ h4.title {
 .choose-date {
   display: flex;
   align-items: center;
+  padding-right: 20px;
+  background: url(~@/assets/rili.png) right center no-repeat;
+  background-size: 20px;
+  height: 50px;
+
+  .van-cell {
+    padding: 10px 5px;
+  }
 
   .van-cell__value--alone {
     text-align: right;
@@ -121,4 +164,53 @@ h4.title {
   &>span {
     white-space: nowrap;
   }
+}
+
+
+.list {
+  .list-header {
+    width: 100%;
+    padding: 10px 0;
+    background-color: rgba(60, 128, 242, .8);
+    color: #fff;
+    display: flex;
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .list-body {
+    .list-item {
+      display: flex;
+      padding: 4px 0;
+      &:nth-child(odd) {
+        background-color: rgba(60, 128, 242, .1);
+      }
+      &>span{
+        &:first-child{
+          transform: scale(.9);
+        }
+      }
+    }
+  }
+
+  .list-header,
+  .list-body .list-item {
+    &>span {
+      font-size: 12px;
+      width: 12%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      line-height: 1.2;
+      i{
+        transform: scale(.8);
+      }
+      &:first-child {
+        width: 16%;
+        text-align: center;
+      }
+    }
+  }
+
 }
