--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: PingFang;
-  src: url(./font/SOURCEHANSANSCN-MEDIUM.OTF);
+  font-family: Barlow;
+  src: url(./font/Barlow-Medium-woff.ttf);
 }
 
 .page-contain {
