--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -25,7 +25,7 @@ h2.title {
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   background: #3C80F2;
   border-radius: 0px 0px 4px 4px;
   position: relative;
@@ -56,6 +56,14 @@ h4.title::before {
   position: absolute;
   top: calc(50% - 8px);
   left: 0;
+}
+h4.title .sub-des {
+  font-size: 12px;
+}
+h4.title .sub-des .value {
+  font-size: 16px;
+  padding: 0 2px;
+  color: #3c80f2;
 }
 .device-content {
   display: flex;
@@ -110,7 +118,7 @@ h4.title::before {
 }
 .device-content li:first-child > div img,
 .device-content li:nth-child(2) > div img {
-  height: 20px;
+  height: 25px;
 }
 .device-content li > img {
   height: 30px;
@@ -138,7 +146,7 @@ h4.title::before {
 }
 .list .list-header {
   width: 100%;
-  padding: 10px 0;
+  padding: 6px 0;
   background-color: rgba(60, 128, 242, 0.8);
   color: #fff;
   display: flex;
@@ -155,10 +163,13 @@ h4.title::before {
 .list .list-body .list-item > span:first-child {
   transform: scale(0.9);
 }
+.list .list-body .list-item > span.red {
+  color: red;
+}
 .list .list-header > span,
 .list .list-body .list-item > span {
   font-size: 12px;
-  width: 12%;
+  width: 11.5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -171,6 +182,76 @@ h4.title::before {
 }
 .list .list-header > span:first-child,
 .list .list-body .list-item > span:first-child {
-  width: 16%;
+  width: 19.5%;
   text-align: center;
+}
+.deviceDcDes {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(60, 128, 242, 0.1);
+  border-radius: 2px;
+  padding: 6px 4px;
+}
+.deviceDcDes p {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.deviceDcDes p .num {
+  color: #3C80F2;
+  font-size: 18px;
+}
+.deviceDcDes p .num .unit {
+  color: #333;
+  opacity: 0.7;
+  font-size: 12px;
+}
+.deviceDcDes p .name {
+  font-size: 12px;
+  color: #333;
+}
+.deviceDcStateDes {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: relative;
+}
+.deviceDcStateDes .icon {
+  position: absolute;
+  left: calc(50% - 25px);
+  top: calc(50% - 25px);
+  background: #f5f7f9;
+  border: 6px solid #fff;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.deviceDcStateDes .icon img {
+  width: 28px;
+}
+.deviceDcStateDes p {
+  width: calc(50% - 6px);
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  background: #f5f7f9;
+  border-radius: 6px;
+  margin: 6px 0;
+  padding: 6px 8px;
+}
+.deviceDcStateDes p .value {
+  color: #3C80F2;
+  font-size: 14px;
+  margin-top: 6px;
+}
+.deviceDcStateDes p:nth-child(odd) {
+  text-align: right;
+}
+.deviceDcStateDes.openState p,
+.deviceDcStateDes.openState .icon {
+  background: #fefbec;
 }
