--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -29,17 +29,19 @@ h2.title {
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   background: #3C80F2;
   border-radius: 0px 0px 4px 4px;
   position: relative;
-  .icon{
+
+  .icon {
     position: absolute;
-    &.right-icon{
+
+    &.right-icon {
       right: 10px;
     }
 
-    &.left-icon{
+    &.left-icon {
       left: 10px;
     }
   }
@@ -63,6 +65,16 @@ h4.title {
     position: absolute;
     top: calc(50% - 8px);
     left: 0;
+  }
+
+  .sub-des {
+    font-size: 12px;
+
+    .value {
+      font-size: 16px;
+      padding: 0 2px;
+      color: #3c80f2;
+    }
   }
 }
 
@@ -127,7 +139,7 @@ h4.title {
         }
 
         img {
-          height: 20px;
+          height: 25px;
         }
       }
     }
@@ -169,7 +181,7 @@ h4.title {
 .list {
   .list-header {
     width: 100%;
-    padding: 10px 0;
+    padding: 6px 0;
     background-color: rgba(60, 128, 242, .8);
     color: #fff;
     display: flex;
@@ -181,12 +193,18 @@ h4.title {
     .list-item {
       display: flex;
       padding: 4px 0;
+
       &:nth-child(odd) {
         background-color: rgba(60, 128, 242, .1);
       }
-      &>span{
-        &:first-child{
+
+      &>span {
+        &:first-child {
           transform: scale(.9);
+        }
+
+        &.red {
+          color: red;
         }
       }
     }
@@ -196,20 +214,108 @@ h4.title {
   .list-body .list-item {
     &>span {
       font-size: 12px;
-      width: 12%;
+      width: 11.5%;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       line-height: 1.2;
-      i{
+
+      i {
         transform: scale(.8);
       }
+
       &:first-child {
-        width: 16%;
+        width: 19.5%;
         text-align: center;
       }
     }
   }
 
+}
+
+
+.deviceDcDes {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(60, 128, 242, .1);
+  border-radius: 2px;
+  padding: 6px 4px;
+
+  p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .num {
+      color: #3C80F2;
+      font-size: 18px;
+
+      .unit {
+        color: #333;
+        opacity: 0.7;
+        font-size: 12px;
+      }
+    }
+
+    .name {
+      font-size: 12px;
+      color: #333;
+    }
+  }
+}
+
+.deviceDcStateDes {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: relative;
+
+  .icon {
+    position: absolute;
+    left: calc(50% - 25px);
+    top: calc(50% - 25px);
+    background: #f5f7f9;
+    border: 6px solid #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 28px;
+    }
+  }
+
+  p {
+    width: calc(50% - 6px);
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    background: #f5f7f9;
+    border-radius: 6px;
+    margin: 6px 0;
+    padding: 6px 8px;
+
+
+    .value {
+      color: #3C80F2;
+      font-size: 14px;
+      margin-top: 6px;
+    }
+
+    &:nth-child(odd) {
+      text-align: right;
+    }
+  }
+
+  &.openState {
+    p,
+    .icon {
+      background: #fefbec;
+    }
+  }
 }
