--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -134,23 +134,18 @@ a {
   -webkit-backface-visibility: hidden;
 }
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 1px;
   height: 5px;
 }
 ::-webkit-scrollbar-track-piece {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.02);
   -webkit-border-radius: 6px;
 }
-::-webkit-scrollbar-thumb:vertical {
-  height: 5px;
-  background-color: rgba(125, 125, 125, 0.7);
+::-webkit-scrollbar-thumb{
+  background-color: rgba(125, 125, 125, 0.27);
   -webkit-border-radius: 6px;
 }
-::-webkit-scrollbar-thumb:horizontal {
-  width: 5px;
-  background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
-}
+
 html,
 body {
   font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", "微软雅黑",
