--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -305,6 +305,10 @@ h4.title {
       color: #3C80F2;
       font-size: 14px;
       margin-top: 6px;
+
+      &.red {
+        color: red !important;
+      }
     }
 
     &:nth-child(odd) {
@@ -313,6 +317,7 @@ h4.title {
   }
 
   &.openState {
+
     p,
     .icon {
       background: #fefbec;
